fixed some overflow errors and normalized page width

--- a/src/app/components/character-view/character-view.component.sass
+++ b/src/app/components/character-view/character-view.component.sass
@@ -1,7 +1,6 @@
 .charview-header
     height: 100px
     background: #000000
-    width: 100%
     padding-top: 10px
     .charview-campaign
         color: #555555
@@ -9,8 +8,7 @@
         text-align: center
     .charview-charname
         color: #ffffff
-        position: relative
-        left: 200px
+        padding-left: 200px
         font-size: 60px
     .charview-portrait
         position: absolute
@@ -23,18 +21,34 @@
         border-style: solid
         top: 60px
         left: 20px
-.charview-charrank
-    color: #000000
-    position: relative
-    z-index: 5
-    left: 200px
-    font-size: 40px
-.charview-charclass
-    color: #000000
-    position: relative
-    left: 200px
-    font-size: 20px
-    font-style: italic
-#lv-span
-    font-size: 15px
-    font-family: sans-serif
+.charview-subheader
+    padding-left: 200px
+    .charview-race
+        font-size: 20px
+        font-weight: bold
+    .charview-charrank
+        color: #000000
+        z-index: 5
+        font-size: 40px
+    .charview-charclass
+        color: #000000
+        font-size: 20px
+        font-style: italic
+    #lv-span
+        font-size: 15px
+        font-family: sans-serif
+    .charview-descbox
+        border-radius: 5px
+        border-width: 2px
+        border-style: solid
+        border-color: #000000
+        padding: 10px
+        margin: 10px
+        .charview-description
+            font-size: 20px
+        #cv-desc
+            width: 100%
+            height: 100%
+            font-size: 20px
+            word-wrap: break-word
+            font-family: serif
